<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.epam.tc</groupId>
    <artifactId>ElizavetaTatarinova</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <driver>chrome</driver>
        <domain>https://jdi-testing.github.io/jdi-light/</domain>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <selenium.version>4.1.1</selenium.version>
        <user.data.xml.hw2>${basedir}/src/test/java/com/epam/tc/hw2/testData/JDIUsers</user.data.xml.hw2>
        <suite.file.directory>${basedir}/src/test/resources/</suite.file.directory>
        <testng.version>7.4.0</testng.version>
        <assertj-core.version>3.22.0</assertj-core.version>
        <jdi-light-html.version>1.3.2</jdi-light-html.version>
        <selenium-java.version>3.141.59</selenium-java.version>
        <selenium-support.version>4.1.1</selenium-support.version>
        <webdrivermanager.version>5.0.2</webdrivermanager.version>
        <maven-surefire-plugin.version>3.0.0-M5</maven-surefire-plugin.version>
        <allure-testng.version>2.13.2</allure-testng.version>
        <slf4j-api.version>1.7.30</slf4j-api.version>
        <aspectj.version>1.9.7</aspectj.version>
        <allure-maven.version>2.10.0</allure-maven.version>
        <cucumber.version>7.2.3</cucumber.version>
        <commons-io.version>2.6</commons-io.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.epam.tat.module4</groupId>
            <artifactId>calculator</artifactId>
            <version>1.0</version>
            <scope>system</scope>
            <systemPath>${basedir}/lib/calculator-1.0.jar</systemPath>
            <type>jar</type>
            <optional>true</optional>
        </dependency>

        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>${testng.version}</version>
        </dependency>

        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>${assertj-core.version}</version>
        </dependency>

        <dependency>
            <groupId>com.epam.jdi</groupId>
            <artifactId>jdi-light-html</artifactId>
            <version>RELEASE</version>
        </dependency>

        <!--<dependency>
            <groupId>io.github.bonigarcia</groupId>
            <artifactId>webdrivermanager</artifactId>
            <version>${webdrivermanager.version}</version>
            <scope>test</scope>
        </dependency>-->

        <dependency>
            <groupId>io.cucumber</groupId>
            <artifactId>cucumber-java</artifactId>
            <version>${cucumber.version}</version>
        </dependency>

        <dependency>
            <groupId>io.cucumber</groupId>
            <artifactId>cucumber-testng</artifactId>
            <version>${cucumber.version}</version>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>RELEASE</version>
            <scope>compile</scope>
        </dependency>
        <!--<dependency>
            <groupId>io.github.bonigarcia</groupId>
            <artifactId>webdrivermanager</artifactId>
            <version>5.1.0</version>
        </dependency>-->

    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven-surefire-plugin.version}</version>
                <configuration>
                    <argLine>-javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"</argLine>
                    <suiteXmlFiles>
                        <suiteXmlFile>${testng.suite.file}</suiteXmlFile>
                    </suiteXmlFiles>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>AddAndSubtractOperationTest</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <testng.suite.file>${suite.file.directory}/AddAndSubtractOperationTestSuite.xml</testng.suite.file>
            </properties>
        </profile>
        <profile>
            <id>AllTests</id>
            <properties>
                <testng.suite.file>${suite.file.directory}/AllTestsTestSuite.xml</testng.suite.file>
            </properties>
        </profile>
        <profile>
            <id>MultiplyAndDivideTest</id>
            <properties>
                <testng.suite.file>${suite.file.directory}/MultiplyAndDivideTestSuite.xml</testng.suite.file>
            </properties>
        </profile>
        <profile>
            <id>Homework2TestSuite</id>
            <properties>
                <testng.suite.file>${suite.file.directory}/Homework2TestSuite.xml</testng.suite.file>
            </properties>
        </profile>
        <profile>
            <id>Homework3TestSuite</id>
            <properties>
                <testng.suite.file>${suite.file.directory}/Homework3TestSuite.xml</testng.suite.file>
            </properties>
        </profile>
        <profile>
            <id>Homework4TestSuite</id>
            <properties>
                <testng.suite.file>${suite.file.directory}/Homework4TestSuite.xml</testng.suite.file>
            </properties>
        </profile>
        <profile>
            <id>Homework5TestSuite</id>
            <properties>
                <testng.suite.file>${suite.file.directory}/Homework5TestSuite.xml</testng.suite.file>
            </properties>
        </profile>
    </profiles>

    <reporting>
        <excludeDefaults>true</excludeDefaults>
        <plugins>
            <plugin>
                <groupId>io.qameta.allure</groupId>
                <artifactId>allure-maven</artifactId>
                <version>${allure-maven.version}</version>
            </plugin>
        </plugins>
    </reporting>
</project>